--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,12 @@
 article {
   section {
-    height: 100vh;
+    min-height: 100vh;
+    --vh: 1vh;
+    min-height: calc(var(--vh) * 100);
     display: flex;
     flex-direction: column;
     header {
-      height: 80px;
+      min-height: 32px;
       background: #444;
     }
     .content {
@@ -62,7 +64,8 @@ article {
             }
             input {
               display: block;
-              text-align: right;
+              text-align: center;
+              width: 40px;
             }
           }
         }
