改进：画布指针样式

--- a/src/style.scss
+++ b/src/style.scss
@@ -22,6 +22,7 @@ article {
         overflow: auto;
         #canvas {
           background: #fff;
+          cursor: crosshair;
         }
       }
       aside {
